--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -4,8 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.68"
+async-trait = "0.1.63"
+russh = "0.36.0"
+russh-keys = "0.24.0"
+thiserror = "1.0.38"
 # clap = { version = "4.0.19", features = ["derive"] }
 # reqwest = { version = "0.11.12", features = ["rustls-tls"] }
 # serde = { version = "1", features = ["derive"] }
 # serde_json = "1.0.87"
-# tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
