--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.68"
 async-trait = "0.1.63"
+bytes = "1.3.0"
 russh = "0.36.0"
 russh-keys = "0.24.0"
 thiserror = "1.0.38"
@@ -14,5 +15,6 @@ thiserror = "1.0.38"
 # serde = { version = "1", features = ["derive"] }
 # serde_json = "1.0.87"
 tokio = { version = "1", features = ["full"] }
+tokio-util = { version = "0.7.4", features = ["codec"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
