--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 anyhow = "1.0.68"
 async-trait = "0.1.63"
 bytes = "1.3.0"
+ed25519-dalek = "1.0.1"
+futures = "0.3.26"
 russh = "0.36.0"
 russh-keys = "0.24.0"
 thiserror = "1.0.38"
