chore: attempt to decode packfile

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -8,8 +8,10 @@ anyhow = "1.0.68"
 async-trait = "0.1.63"
 bytes = "1.3.0"
 ed25519-dalek = "1.0.1"
+flate2 = "1.0.25"
 futures = "0.3.26"
 futures-util = "0.3.26"
+git-pack = "0.30.1"
 russh = "0.36.0"
 russh-keys = "0.24.0"
 thiserror = "1.0.38"
