--- a/crates/ssh/Cargo.toml
+++ b/crates/ssh/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "cli"
+name = "thoenix-ssh"
 version = "0.1.0"
 edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0.68"
@@ -23,4 +25,3 @@ tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.4", features = ["codec"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
-thoenix-ssh = { path = "../ssh" }
