--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -1,27 +1,23 @@
 [package]
-name = "cli"
+name = "thoenix-http"
 version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
 anyhow = "1.0.68"
-async-trait = "0.1.63"
-bytes = "1.3.0"
-ed25519-dalek = "1.0.1"
-flate2 = "1.0.25"
+axum = "0.6.4"
 futures = "0.3.26"
 futures-util = "0.3.26"
-git-pack = "0.30.1"
-russh = "0.36.0"
-russh-keys = "0.24.0"
+hyper = "0.14.24"
 thiserror = "1.0.38"
 # clap = { version = "4.0.19", features = ["derive"] }
 # reqwest = { version = "0.11.12", features = ["rustls-tls"] }
 # serde = { version = "1", features = ["derive"] }
 # serde_json = "1.0.87"
 tokio = { version = "1", features = ["full"] }
-tokio-util = { version = "0.7.4", features = ["codec"] }
+# tokio-util = { version = "0.7.4", features = ["codec"] }
+tower = { version = "0.4", features = ["util"] }
+tower-http = { version = "0.3.0", features = ["fs", "cors"] }
 tracing = "0.1.37"
-tracing-subscriber = "0.3.16"
-thoenix-ssh = { path = "../ssh" }
-thoenix-http = { path = "../http" }
