--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -25,3 +25,4 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 thoenix-ssh = { path = "../ssh" }
 thoenix-http = { path = "../http" }
+git2 = "0.16.1"
