--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -12,6 +12,7 @@ flate2 = "1.0.25"
 futures = "0.3.26"
 futures-util = "0.3.26"
 git-pack = "0.30.1"
+project-base-directory = "0.2.0"
 russh = "0.36.0"
 russh-keys = "0.24.0"
 thiserror = "1.0.38"
@@ -25,4 +26,3 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 thoenix-ssh = { path = "../ssh" }
 thoenix-http = { path = "../http" }
-git2 = "0.16.1"
