build(cargo): add versioning info to cargo manifest
The version is now inherited from the workspace Cargo.toml. Also some
links and other information needed for publishing has been added.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 members = ["crates/*"]
 resolver = "2"
 
+[workspace.package]
+edition = "2021"
+homepage = "https://github.com/justinrubek/thoenix"
+license = "MIT"
+repository = "https://github.com/justinrubek/thoenix"
+version = "0.1.0"
+
 [profile.release]
 # opt-level = 2 # fast and small wasm
 
