--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ edition = "2021"
 homepage = "https://github.com/justinrubek/thoenix"
 license = "MIT"
 repository = "https://github.com/justinrubek/thoenix"
-version = "0.1.0"
+version = "0.2.0"
 
-[profile.release]
-# opt-level = 2 # fast and small wasm
-
+[profile.release.package]
