--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
 name = "thoenix-http"
-version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version = "0.2.0"
 
 [dependencies]
 anyhow = "1.0.68"
@@ -14,12 +12,20 @@ futures-util = "0.3.26"
 git2 = "0.16.1"
 hyper = "0.14.24"
 thiserror = "1.0.38"
-# clap = { version = "4.0.19", features = ["derive"] }
-# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
-# serde = { version = "1", features = ["derive"] }
-# serde_json = "1.0.87"
-tokio = { version = "1", features = ["full"] }
-tokio-util = { version = "0.7.4", features = ["codec"] }
-tower = { version = "0.4", features = ["util"] }
-tower-http = { version = "0.3.0", features = ["fs", "cors"] }
 tracing = "0.1.37"
+
+[dependencies.tokio]
+version = "1"
+features = ["full"]
+
+[dependencies.tokio-util]
+version = "0.7.4"
+features = ["codec"]
+
+[dependencies.tower]
+version = "0.4"
+features = ["util"]
+
+[dependencies.tower-http]
+version = "0.3.0"
+features = ["fs", "cors"]
