--- a/crates/ssh/Cargo.toml
+++ b/crates/ssh/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
 name = "thoenix-ssh"
-version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version = "0.2.0"
 
 [dependencies]
 anyhow = "1.0.68"
@@ -17,11 +15,13 @@ git-pack = "0.30.1"
 russh = "0.36.0"
 russh-keys = "0.24.0"
 thiserror = "1.0.38"
-# clap = { version = "4.0.19", features = ["derive"] }
-# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
-# serde = { version = "1", features = ["derive"] }
-# serde_json = "1.0.87"
-tokio = { version = "1", features = ["full"] }
-tokio-util = { version = "0.7.4", features = ["codec"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
+
+[dependencies.tokio]
+version = "1"
+features = ["full"]
+
+[dependencies.tokio-util]
+version = "0.7.4"
+features = ["codec"]
