feat: add terraform http backend routes
These routes are used by terraform to track its state. The solution
provided here is not robust and only stores data in memory. It is a
showcase of the interface that needs to be implemented and should only
serve as a guide for implementing proper storage.

--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -11,6 +11,8 @@ futures = "0.3.26"
 futures-util = "0.3.26"
 git2 = "0.16.1"
 hyper = "0.14.24"
+serde = { workspace = true }
+serde_json = { workspace = true }
 thiserror = "1.0.38"
 tracing = "0.1.37"
 
@@ -28,4 +30,4 @@ features = ["util"]
 
 [dependencies.tower-http]
 version = "0.3.0"
-features = ["fs", "cors"]
+features = ["fs", "cors", "trace"]
