--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,11 @@ license = "MIT"
 repository = "https://github.com/justinrubek/thoenix"
 version = "0.2.0"
 
+[workspace.dependencies]
+serde_json = "1"
+
+[workspace.dependencies.serde]
+version = "1"
+features = ["derive"]
+
 [profile.release.package]
