--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -7,14 +7,14 @@ edition = { workspace = true }
 anyhow = "1.0.68"
 async-trait = "0.1.63"
 bytes = "1.3.0"
-ed25519-dalek = "2.1.0"
+ed25519-dalek = { workspace = true }
 flate2 = "1.0.25"
 futures = "0.3.26"
 futures-util = "0.3.26"
 git-pack = "0.30.1"
-project-base-directory = "0.2.0"
-russh = "0.36.0"
-russh-keys = "0.24.0"
+project-base-directory = "0.3"
+russh = { workspace = true }
+russh-keys = { workspace = true }
 thiserror = "1.0.38"
 clap = { version = "4", features = ["derive"] }
 # reqwest = { version = "0.11.12", features = ["rustls-tls"] }
