--- a/crates/ssh/Cargo.toml
+++ b/crates/ssh/Cargo.toml
@@ -7,13 +7,13 @@ version = "0.2.0"
 anyhow = "1.0.68"
 async-trait = "0.1.63"
 bytes = "1.3.0"
-ed25519-dalek = "1.0.1"
+ed25519-dalek = { workspace = true }
 flate2 = "1.0.25"
 futures = "0.3.26"
 futures-util = "0.3.26"
 git-pack = "0.30.1"
-russh = "0.36.0"
-russh-keys = "0.24.0"
+russh = { workspace = true }
+russh-keys = { workspace = true }
 thiserror = "1.0.38"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
